--- a/public/app/src/assets/scss/components/_step.scss
+++ b/public/app/src/assets/scss/components/_step.scss
@@ -41,7 +41,7 @@
   }
 
   @include bp($large-bp) {
-    padding: 3rem 0;
+    padding: 3rem 0 0;
     margin-top: 3rem;
 
     &:last-child {
